# corpus

./: .dockerignore  .gitignore  .helmignore  CONTRIBUTING.md  COPYRIGHT  Makefile  README.md  docker-compose.yml
agents/chunking/: Dockerfile  noxfile.py  package.json  pyproject.toml  pytest.ini
agents/chunking/prompts/: document_chunker.txt  document_chunker_task.txt
agents/chunking/src/: __init__.py  agent_executor.py  chunk_uploader.py  chunking_strategy.py  document_downloader.py  env_validator.py  pageindex_chunker.py  runner.py
agents/chunking/src/pageindex/: __init__.py  models.py  page_index_md.py  utils.py
agents/chunking/tests/: conftest.py  test_chunking_strategy.py  test_models.py  test_pageindex_processing.py
agents/qa/: .dockerignore  Dockerfile  package.json  pyproject.toml
agents/qa/prompts/: qa_orchestrator.txt
agents/qa/src/: __init__.py  agent_config.py  agent_executor.py  answer_uploader.py  answer_validator.py  chunk_fetcher.py  citation_validator.py  env_validator.py  json_extractor.py  prompt_composer.py  runner.py  scoped_mcp_tools.py
agents/qa/tests/: __init__.py  test_json_extractor.py
agents/workflow/: .dockerignore  Dockerfile  noxfile.py  package.json  pyproject.toml  pytest.ini
agents/workflow/prompts/: workflow_agent_task.txt
agents/workflow/skills/document-skills/: .gitkeep
agents/workflow/src/: agent_config.py  agent_executor.py  env_validator.py  input_downloader.py  output_uploader.py  result_handler.py  runner.py  workflow_loader.py
agents/workflow/src/database_tools/: __init__.py  kuzu_tools.py  sqlite_tools.py
agents/workflow/tests/execution/: test_env_validator.py  test_input_downloader.py  test_result_handler.py  test_workflow_loader.py
backend/: .env.example  alembic.ini  noxfile.py  pyproject.toml  pytest.ini
backend/alembic/: Dockerfile  env.py
backend/alembic/versions/: 00b46a442b7a_add_grok_models.py  032ce7722bc8_add_agentic_conversation.py  085b19cca784_add_doc_question_label.py  109e29636acc_add_answer_found_column_to_matrix_cell_.py  14802c835b3a_add_ai_models_providers.py  180af2f77690_add_document_indexing_job.py  19e88dea816b_add_use_agent_qa.py  1b25c6e3f0ca_add_performance_indices_for_entity_refs.py  222a16db167a_add_deleted_columns_for_soft_delete.py  2deb94835e88_add_label_to_entity_set_members.py  2e7778346347_add_page_count_to_usage_events.py  2eee1325ba41_add_question_multi_config.py  2fd5369a5190_add_confidence_to_answer_sets.py  32bd92b38258_document_checksum.py  38c7f6b94a1f_matrix_template_variables.py  39b3d718d103_add_workflows_tables.py  4e3f7c3be89a_add_indices_to_foreign_key_columns.py  5b76e1a45b0a_add_deleted_columns_to_entity_sets.py  5bd5e08b35df_remove_lago_columns_from_subscriptions.py  5ce249d08456_convert_enums_cols_to_strings.py  5dfa69679e3f_entity_set_migration_hard_cutover.py  5f2eea6c488e_add_company_indexing_columns.py  5fdb3316d6cc_remove_name_and_order_option_sets.py  63166e6acb4b_fix_document_checksum_unique_constraint.py  6b8f38f6defb_add_company_user.py  6c70f9022cbf_add_question_option_types.py  760f9b6a1075_add_permission_mode_to_messages.py  780989e7ddc5_deprecate_multi_select.py  814b0770e36e_update_anthropic_models_sonnet_45.py  82f7d53090e6_add_gemini_models.py  8f2589078d89_add_service_accounts_table.py  92a89bb607a7_add_extracted_content_length_to_.py  937a7f8179e0_user_lookup_indicies.py  a06adee7f5fe_separate_document_entity.py  a12a31032e6f_add_workspace.py  a137f5f7fc3f_fix_openrouter_model_ids.py  a140c72a9ef5_add_citations.py  a40cb53a0189_add_company_id.py  a8f1b8aee630_add_document_extraction_fields.py  ab247672d522_update_ai_models_jan_2026.py  (+11 more)
backend/api/: CLAUDE.md  Dockerfile  main.py
backend/api/v1/routes/: health.py  router.py
backend/apps/: __init__.py
backend/apps/agent/: Dockerfile  __init__.py  main.py
backend/apps/api/: Dockerfile  __init__.py  main.py  router.py
backend/common/core/: __init__.py  config.py  constants.py  exceptions.py  otel_axiom_exporter.py  security.py
backend/common/db/: base.py  context.py  scoped.py  session.py  transaction_utils.py
backend/common/execution/: __init__.py  job_spec.py
backend/common/execution/executors/: __init__.py  base.py  docker.py  k8s.py  modal_executor.py
backend/common/execution/workflow_framework/: __init__.py  activity_helpers.py  orchestration_helpers.py  orchestration_models.py  service_accounts.py
backend/common/mappers/: model_mapper.py
backend/common/meta/: singleton.py
backend/common/middleware/: __init__.py
backend/common/providers/ai/: __init__.py  aisuite_provider.py  anthropic_provider.py  factory.py  google_provider.py  (+6 more)
backend/common/repositories/: base.py
backend/common/temporal/: client.py
backend/common/workers/: base_worker.py  launcher.py
backend/demos/: README.md
backend/internal/routes/: probes.py  router.py
backend/job_templates/: agent_qa_job.yaml.j2  chunking_job.yaml.j2  workflow_job.yaml.j2
backend/tests/: CLAUDE.md  conftest.py
backend/tests/factories/: document_factory.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: conftest.py  test_workers_integration.py
backend/tests/unit/: conftest.py  test_migrations.py
backend/workers/: Dockerfile  entrypoint.sh  run_agent_qa_worker.py  run_document_indexing_worker.py  run_qa_worker.py  run_temporal_worker.py  run_workflow_worker.py
libs/ai_config/: noxfile.py  pyproject.toml
libs/ai_config/ai_config/: __init__.py  config.py
libs/ai_config/tests/: test_config.py
libs/documents/: noxfile.py  pyproject.toml
libs/documents/documents/: __init__.py  chunk.py
libs/matrices/: pyproject.toml
libs/matrices/matrices/: __init__.py  matrix_enums.py
libs/mcp_tools/: pyproject.toml
libs/mcp_tools/mcp_tools/: __init__.py  openapi.json  openapi_mcp_generator.py
libs/mcp_tools/tests/: test_openapi_mcp_generator.py
libs/qa/: pyproject.toml
libs/qa/qa/: __init__.py  ai_response_parser.py  ai_responses.py  answer_data.py  citation.py  citation_validation.py
libs/questions/: pyproject.toml
libs/questions/questions/: __init__.py  question_type.py
(+344 files in other folders)
