[tool.poetry]
name = "corpus-service"
version = "0.1.0"
description = "A FastAPI service with S3, PostgreSQL, and RabbitMQ"
authors = ["Kyle Sandell"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
boto3 = "^1.39.9"
pika = "^1.3.2"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
uuid7 = "^0.1.0"
openai = "^1.97.0"
pypdf2 = "^3.0.1"
python-docx = "^1.2.0"
aio-pika = "^9.5.5"
#anthropic = "^0.58.2"
opentelemetry-api = "^1.35.0"
opentelemetry-sdk = "^1.35.0"
opentelemetry-instrumentation-fastapi = "^0.56b0"
opentelemetry-exporter-otlp = "^1.35.0"
opentelemetry-instrumentation-logging = "^0.56b0"
opentelemetry-instrumentation-asgi = "^0.56b0"
aiocache = {extras = ["redis"], version = "^0.12.3"}
redis = "^5.0.0"
vectorize-client = "^0.2.1"
aiofiles = "^24.1.0"
aiohttp = "^3.12.15"
urllib3 = "^2.5.0"
markitdown = {extras = ["docx", "pptx", "xls", "xlsx", "pdf"], version = "^0.1.2"}
google-generativeai = "^0.8.5"
temporalio = "^1.15.0"
elasticsearch = {extras = ["async"], version = "^9.1.0"}
#xai-sdk = "^1.0.1"
pandoc = "^2.4"
deprecated = "^1.2.18"
pydantic-xml = "^2.17.3"
pymupdf = "^1.26.4"
python-pptx = "^1.0.2"
markdown = "^3.8.2"
exa-py = "^2.0.0"
# Authentication dependencies
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
okta-jwt-verifier = "^0.2.3"
cryptography = "^43.0.0"
gunicorn = "^23.0.0"
google-cloud-speech = "^2.33.0"
google-cloud-storage = "^2.18.0"
mutagen = "^1.47.0"
slowapi = "^0.1.9"
claude-agent-sdk = "^0.1.4"
kubernetes = ">=29.0.0,<30.0.0"
jinja2 = "^3.1.6"
rapidfuzz = "^3.14.2"
# Billing
stripe = "^12.2.0"
# Shared libs
questions = {path = "../libs/questions", develop = true}
matrices = {path = "../libs/matrices", develop = true}
documents = {path = "../libs/documents", develop = true}
qa = {path = "../libs/qa", develop = true}
workflows = {path = "../libs/workflows", develop = true}
ai-config = {path = "../libs/ai_config", develop = true}
firebase-admin = ">=6.0.0,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.0"
mypy = "^1.17.0"
black = "^25.1.0"
ruff = "^0.12.4"
aiosqlite = "^0.21.0"
testing-postgresql = "^1.3.0"
nox = "^2025.5.1"
pytest-dotenv = "^0.5.2"
testcontainers = {extras = ["postgresql"], version = "^4.8.2"}


[tool.ruff]
exclude = [
    "packages/workflows/skills",
]

[tool.ruff.lint]
select = [
    "PLC0415",
    "F401"
]

[tool.black]
exclude = '''
/(
    packages/workflows/skills
)/
'''
