[tool.poetry]
name = "agent-qa"
version = "0.1.0"
description = "Agent-based QA execution service"
authors = ["Kyle Sandell"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
claude-agent-sdk = "^0.1.4"
anthropic = "0.39.0"
pydantic = "2.10.3"
requests = "2.31.0"
rapidfuzz = "3.14.2"
# Shared libs
qa = {path = "../../libs/qa", develop = true}
questions = {path = "../../libs/questions", develop = true}
matrices = {path = "../../libs/matrices", develop = true}
mcp-tools = {path = "../../libs/mcp_tools", develop = true}
ai-config = {path = "../../libs/ai_config", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
nox = "^2025.5.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
