[tool.poetry]
name = "ai-config"
version = "0.1.0"
description = "Shared AI configuration for question types and matrix types"
authors = ["Kyle Sandell"]
packages = [{include = "ai_config"}]

[tool.poetry.dependencies]
python = "^3.11"
questions = {path = "../questions", develop = true}
matrices = {path = "../matrices", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^25.1.0"
ruff = "^0.12.4"
nox = "^2025.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
