[tool.poetry]
name = "matrices"
version = "0.1.0"
description = "Matrix domain models and enums"
authors = ["Kyle Sandell"]
packages = [{include = "matrices"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
nox = "^2025.5.1"

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
